--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
             // You may comment out the database dependency you do not use
             'org.xerial:sqlite-jdbc:3.30.1',
             'org.apache.derby:derby:10.14.2.0',
+            'org.apache.derby:derbyclient:10.14.2.0',
+            'org.apache.derby:derbytools:10.14.2.0',
 
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
@@ -58,6 +60,10 @@ test {
 jar {
     manifest {
         attributes 'Main-Class': mainClassName
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
