--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id "io.freefair.lombok" version "5.0.0-rc6"
     id 'org.openjfx.javafxplugin' version '0.0.10'
 }
-mainClassName = 'edu.wpi.cs3733.D22.teamZ.Main'
+mainClassName = 'edu.wpi.cs3733.D22.teamZ.api.Main'
 
 repositories {
     mavenCentral()
