Re-add slf4j dependency to make it work as a standalone

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
             'org.apache.derby:derbytools:10.14.2.0',
 
             'org.slf4j:slf4j-api:1.7.30',
-            //'org.slf4j:slf4j-simple:1.7.30',
+            'org.slf4j:slf4j-simple:1.7.30',
     )
     implementation 'org.jetbrains:annotations:20.1.0'
 
